Add final statement in recommender evaluation

--- a/mensa_recommend/notebooks/EZ-09-12-2022-recommender_evaluation.ipynb
+++ b/mensa_recommend/notebooks/EZ-09-12-2022-recommender_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,15 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "ids = []\n",
     "names = []\n",
+    "all_names = []\n",
     "categories = []\n",
     "additives = []\n",
     "allergies = []\n",
     "main = []\n",
+    "\n",
+    "for d in dishes:\n",
+    "    all_names.append(d[1])\n",
     "\n",
     "for d in dishes:\n",
     "    o0, o1, o2, o3, o4, o5 = d\n",
@@ -43,7 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 8, 9, 11, 14, 16, 17, 18, 20, 21, 24, 25, 29, 32, 38, 41, 43, 44, 51, 57, 61, 66, 76, 77, 87, 89, 92, 93, 95, 96, 97, 100, 103, 108, 110, 111, 114, 133, 160, 118, 132, 149, 196, 152, 166, 122, 123, 174, 125, 142, 154, 163, 126, 136, 127, 146, 157, 128, 140, 168, 177, 204, 129, 138, 131, 151, 172, 188, 209, 137, 145, 195, 200, 205, 206, 1, 6, 10, 13, 15, 19, 23, 27, 31, 42, 45, 52, 60, 65, 67, 68, 70, 75, 78, 81, 84, 85, 86, 90, 91, 94, 98, 102, 109, 113]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ids)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def encode_binary(l):\n",
@@ -63,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "enc_cat = encode_binary(categories)\n",
@@ -81,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "from numpy import dot\n",
@@ -105,14 +128,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
     "classifier: SentenceTransformer = SentenceTransformer('all-MiniLM-L6-v2')  # bigger: all-mpnet-base-v2\n",
-    "embeds: np.ndarray = classifier.encode(names)"
+    "embeds: np.ndarray = classifier.encode(names)\n",
+    "all_embeds: np.ndarray = classifier.encode(all_names)"
    ],
    "metadata": {
     "collapsed": false
@@ -120,13 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "enc_bert = []\n",
+    "enc_cat_bert = []\n",
     "\n",
     "for i in range(len(names)):\n",
-    "    enc_bert.append(enc[i] + list(np.multiply(embeds[i], 1)))"
+    "    enc_bert.append(enc[i] + list(embeds[i]))\n",
+    "    enc_cat_bert.append(enc_cat[i] + list(embeds[i]))"
    ],
    "metadata": {
     "collapsed": false
@@ -208,10 +234,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 37,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: 0.2, 3: 0.2, 4: 0.2, 5: 0.2, 8: 0.2, 9: 0.2, 11: 0.2, 14: 0.2, 16: 1.0, 17: 0.2, 18: 1.0, 20: 0.2, 21: 0.2, 24: 0.2, 25: 0.2, 29: 0.2, 32: 0.2, 38: 0.2, 41: 0.2, 43: 0.2, 44: 0.2, 51: 1.0, 57: 0.2, 61: 1.0, 66: 0.2, 76: 0.2, 77: 0.2, 87: 0.2, 89: 0.2, 92: 0.2, 93: 1.0, 95: 0.2, 96: 0.2, 97: 0.2, 100: 0.2, 103: 0.2, 108: 0.2, 110: 1.0, 111: 1.0, 114: 0.2, 133: 0.2, 160: 0.2, 118: 0.2, 132: 0.2, 149: 1.0, 196: 0.2, 152: 0.2, 166: 1.0, 122: 0.2, 123: 1.0, 174: 1.0, 125: 0.2, 142: 0.2, 154: 1.0, 163: 0.2, 126: 0.2, 136: 1.0, 127: 1.0, 146: 0.2, 157: 0.2, 128: 0.2, 140: 0.2, 168: 1.0, 177: 0.2, 204: 1.0, 129: 0.2, 138: 0.2, 131: 0.2, 151: 0.2, 172: 1.0, 188: 0.2, 209: 1.0, 137: 0.2, 145: 1.0, 195: 1.0, 200: 1.0, 205: 0.2, 206: 0.2, 1: 0.2, 6: 0.2, 10: 0.2, 13: 0.2, 15: 1.0, 19: 0.2, 23: 0.2, 27: 1.0, 31: 0.2, 42: 0.2, 45: 0.2, 52: 1.0, 60: 0.2, 65: 0.2, 67: 0.2, 68: 0.2, 70: 0.2, 75: 0.2, 78: 0.2, 81: 0.2, 84: 0.2, 85: 0.2, 86: 0.2, 90: 0.2, 91: 1.0, 94: 0.2, 98: 1.0, 102: 0.2, 109: 0.2, 113: 0.2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pork_ratings = {}\n",
+    "for dish in dishes:\n",
+    "    if not dish[5]:\n",
+    "        continue\n",
+    "\n",
+    "    dish_id = dish[0]\n",
+    "    cat = dish[2]\n",
+    "    pork_ratings[dish_id] = 1.0 if 3 in cat else 0.2\n",
+    "print(pork_ratings)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 0.2, 2: 0.7042, 3: 0.7276, 4: 0.5079, 5: 0.758, 8: 0.5176, 9: 0.6425, 11: 0.8802, 14: 0.9694, 16: 0.7233, 17: 0.4146, 18: 0.5011, 20: 0.7836, 21: 0.9645, 24: 0.8092, 25: 0.9519, 29: 0.9766, 32: 0.4233, 38: 0.6176, 41: 0.4526, 43: 0.8856, 44: 0.5217, 51: 0.5993, 57: 0.6579, 61: 0.9917, 66: 0.8501, 76: 0.5912, 77: 0.7741, 87: 0.9311, 89: 0.8558, 92: 0.7903, 93: 0.7434, 95: 0.8913, 96: 0.7233, 97: 0.8535, 100: 0.6085, 103: 0.5818, 108: 0.8397, 110: 0.4139, 111: 0.9112, 114: 0.6018, 133: 0.8676, 160: 0.4306, 118: 0.4706, 132: 0.7314, 149: 0.7403, 196: 0.7633, 152: 0.6401, 166: 0.4747, 122: 0.9236, 123: 0.899, 174: 0.7336, 125: 0.709, 142: 0.6681, 154: 0.5388, 163: 0.9873, 126: 0.7647, 136: 0.455, 127: 0.7395, 146: 0.7003, 157: 0.6705, 128: 0.6866, 140: 0.5045, 168: 0.452, 177: 0.8849, 204: 0.4059, 129: 0.5684, 138: 0.8761, 131: 0.8779, 151: 0.4887, 172: 0.7998, 188: 0.5891, 209: 0.7907, 137: 0.6757, 145: 0.5632, 195: 0.6122, 200: 0.9229, 205: 0.7075, 206: 0.5517, 6: 0.4243, 10: 0.7488, 13: 0.4364, 15: 0.9226, 19: 0.618, 23: 0.9711, 27: 0.6237, 31: 0.8872, 42: 0.984, 45: 0.5126, 52: 0.52, 60: 0.6213, 65: 0.8177, 67: 0.6842, 68: 0.735, 70: 0.7001, 75: 0.4675, 78: 0.5444, 81: 0.8341, 84: 0.8215, 85: 0.8777, 86: 0.8536, 90: 0.831, 91: 0.6364, 94: 0.5197, 98: 0.7459, 102: 0.583, 109: 0.5014, 113: 0.5238}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import random\n",
+    "\n",
+    "erbseneintopf_ratings = {1: 0.2}\n",
+    "for dish in dishes:\n",
+    "    if not dish[5] or dish[0] == 1:\n",
+    "        continue\n",
+    "\n",
+    "    dish_id = dish[0]\n",
+    "    cat = dish[2]\n",
+    "    erbseneintopf_ratings[dish_id] = round(random() * 0.6 + 0.4, 4)\n",
+    "print(erbseneintopf_ratings)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "own_ratings = {93: 0.8, 177: 0.6, 8: 0.8, 57: 0.6, 108: 0.6, 23: 0.8, 5: 0.6, 113: 0.8, 206: 0.8, 163: 0.6, 19: 1.0, 89: 0.6, 68: 0.8, 136: 1.0, 195: 0.8, 142: 0.8, 97: 0.6, 92: 0.4, 15: 1.0, 196: 0.8, 25: 0.2, 205: 1.0, 27: 1.0, 126: 0.6, 110: 0.2, 90: 0.6, 10: 0.8, 60: 0.6, 157: 0.8, 41: 0.8, 9: 0.8, 172: 0.8, 146: 0.6, 91: 0.8, 131: 0.8, 76: 1.0, 114: 0.8, 209: 0.6, 81: 0.4, 38: 1.0, 45: 0.6, 3: 0.6, 154: 0.8, 152: 0.2, 98: 0.6, 188: 0.6, 31: 0.6, 85: 0.2, 86: 0.4, 103: 0.8, 32: 0.8, 6: 0.4, 95: 0.8, 17: 0.8, 16: 0.8, 70: 0.4, 122: 0.6, 174: 0.6, 123: 0.6, 168: 0.8, 132: 1.0, 78: 0.2, 21: 1.0, 128: 0.2, 11: 1.0, 109: 0.2, 138: 0.4, 77: 0.2, 204: 0.6, 18: 0.8, 44: 0.6, 118: 0.4, 149: 0.6, 29: 0.6, 87: 0.8, 43: 1.0, 4: 0.4, 66: 0.8, 51: 0.8, 94: 0.8, 52: 0.6, 133: 0.2, 137: 0.6, 111: 0.6, 102: 0.8, 65: 0.8, 129: 0.6, 100: 0.8, 20: 0.2, 61: 0.4, 145: 0.8, 200: 0.8, 166: 0.8, 42: 0.8, 151: 0.6, 127: 0.8, 96: 0.6, 2: 0.6, 75: 0.2, 67: 0.6, 84: 0.4, 160: 0.2, 13: 0.6, 14: 0.4, 1: 0.4, 125: 0.6, 140: 0.8, 24: 0.6}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.52103144"
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 19, 71\n",
+    "cosine_similarity(all_embeds[all_names.index(\"1/2 Grillhähnchen mit Pommes frites\")], all_embeds[all_names.index(\"Pommes Frites\")])"
    ],
    "metadata": {
     "collapsed": false
@@ -229,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "from math import pow\n",
@@ -286,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "from typing import Tuple\n",
@@ -304,7 +407,7 @@
     "    _, mse, _, mse_test, _ = distance(user_ratings, selected, split=split)\n",
     "    return mse, mse_test\n",
     "\n",
-    "def dimension_reduction(user_ratings, encodings, max_dims: int = 50, early_stop: bool = True) -> [int]:\n",
+    "def feature_selection(user_ratings, encodings, max_dims: int = 50, early_stop: bool = True) -> [int]:\n",
     "    fixed = []\n",
     "    last_mse = -1\n",
     "    dimensions = list(range(len(encodings[0])))\n",
@@ -369,7 +472,7 @@
     "from time import time\n",
     "\n",
     "t = time()\n",
-    "selected_dims, best_mse, best_mse_test, best_mse_es = dimension_reduction(own_ratings, enc_bert, max_dims=int(len(enc[0]) * 1.5), early_stop=False)\n",
+    "selected_dims, best_mse, best_mse_test, best_mse_es = feature_selection(own_ratings, enc_bert, max_dims=int(len(enc[0]) * 1.5), early_stop=False)\n",
     "print(len(selected_dims), best_mse, best_mse_es)\n",
     "print(f\"Done in {time() - t}s\")\n",
     "\n",
@@ -409,27 +512,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 45,
+   "outputs": [],
+   "source": [
+    "def measure_encodings(user_ratings, enc_list: list) -> None:\n",
+    "    print(f\"Recommendations based on {len(user_ratings)} ratings.\")\n",
+    "\n",
+    "    results = []\n",
+    "    for encoding in enc_list:\n",
+    "        results.append((distance(user_ratings, encoding[0]), encoding[1]))\n",
+    "\n",
+    "    best_res_abs = 9999\n",
+    "    best_res_mse = 9999\n",
+    "\n",
+    "    for r in results:\n",
+    "        best_res_abs = min(best_res_abs, r[0][1])\n",
+    "        best_res_mse = min(best_res_mse, r[0][3])\n",
+    "\n",
+    "    for r in results:\n",
+    "        r_abs = f\"\\x1B[4m{r[0][1]}\\x1B[0m\" if best_res_abs == r[0][1] else r[0][1]\n",
+    "        r_mse = f\"\\x1B[4m{r[0][3]}\\x1B[0m\" if best_res_mse == r[0][3] else r[0][3]\n",
+    "        print(r_abs, r_mse, f\": {r[1]}\", \":\", r[0][4])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Recommendations based on 108 ratings.\n",
-      "0.085309 0.088032 : Only dish categories, additives, allergies : 37\n",
-      "0.091767 0.071042 : categories, additives, allergies + BERT embeds : 421\n",
-      "0.074563 0.072358 : BERT embeds : 384\n"
+      "0.125873 \u001B[4m0.119816\u001B[0m : Only dish categories, additives, allergies : 37\n",
+      "0.12569 0.127236 : categories, additives, allergies + BERT embeds : 421\n",
+      "\u001B[4m0.117057\u001B[0m 0.145358 : BERT embeds : 384\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Recommendations based on {len(ratings)} ratings.\")\n",
-    "res_dish_info = distance(own_ratings, enc)\n",
-    "print(res_dish_info[1], res_dish_info[3], \": Only dish categories, additives, allergies\", \":\", res_dish_info[4])\n",
-    "res_dish_info_bert = distance(own_ratings, enc_bert)\n",
-    "print(res_dish_info_bert[1], res_dish_info_bert[3], \": categories, additives, allergies + BERT embeds\", \":\", res_dish_info_bert[4])\n",
-    "res_bert = distance(own_ratings, embeds)\n",
-    "print(res_bert[1], res_bert[3], \": BERT embeds\", \":\", res_bert[4])"
+    "measure_encodings(pork_ratings, [\n",
+    "    # (enc_cat, \"Only dish categories\"),\n",
+    "    (enc, \"Only dish categories, additives, allergies\"),\n",
+    "    # (enc_cat_bert, \"Only dish categories + BERT\"),\n",
+    "    (enc_bert, \"categories, additives, allergies + BERT embeds\"),\n",
+    "    (embeds, \"BERT embeds\"),\n",
+    "])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.41067270957228696"
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_profile = get_profile(erbseneintopf_ratings, enc_bert)\n",
+    "cosine_similarity(test_profile, enc_bert[ids.index(1)])"
    ],
    "metadata": {
     "collapsed": false
@@ -468,6 +620,20 @@
     "0.20863 : Only dish categories, additives, allergies : 37\n",
     "0.19774 : categories, additives, allergies + BERT embeds : 805\n",
     "0.18836 : BERT embeds : 768"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# FINAL\n",
+    "* Less dimensions -> less general recommender\n",
+    "* More dimensions -> more general recommender -> covers more users\n",
+    "Sometimes BERT is better without categories, additives and allergies but this highly depends on the rating distribution.\n",
+    "\n",
+    "Therefore, we will stick with categories, additives, allergies AND BERT."
    ],
    "metadata": {
     "collapsed": false
