Adjust weather score calculations

--- a/backend/notebooks/EZ-14-12-2022-weather.ipynb
+++ b/backend/notebooks/EZ-14-12-2022-weather.ipynb
@@ -2,62 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import threading\n",
-    "\n",
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'latitude': 51.96, 'longitude': 7.64, 'generationtime_ms': 0.3859996795654297, 'utc_offset_seconds': 0, 'timezone': 'GMT', 'timezone_abbreviation': 'GMT', 'elevation': 69.0, 'hourly_units': {'time': 'iso8601', 'apparent_temperature': '°C', 'rain': 'mm', 'windspeed_10m': 'km/h'}, 'hourly': {'time': ['2022-12-12T00:00', '2022-12-12T01:00', '2022-12-12T02:00', '2022-12-12T03:00', '2022-12-12T04:00', '2022-12-12T05:00', '2022-12-12T06:00', '2022-12-12T07:00', '2022-12-12T08:00', '2022-12-12T09:00', '2022-12-12T10:00', '2022-12-12T11:00', '2022-12-12T12:00', '2022-12-12T13:00', '2022-12-12T14:00', '2022-12-12T15:00', '2022-12-12T16:00', '2022-12-12T17:00', '2022-12-12T18:00', '2022-12-12T19:00', '2022-12-12T20:00', '2022-12-12T21:00', '2022-12-12T22:00', '2022-12-12T23:00'], 'apparent_temperature': [-3.5, -3.4, -3.3, -3.2, -3.1, -3.5, -3.5, -3.5, -3.7, -3.7, -3.3, -2.8, -2.2, -2.3, -2.4, -2.4, -2.6, -3.0, -4.0, -4.4, -4.9, -6.5, -6.6, -7.0], 'rain': [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'windspeed_10m': [6.1, 5.0, 3.7, 3.3, 2.5, 5.2, 5.6, 4.2, 4.7, 4.6, 5.7, 5.0, 4.3, 5.0, 5.9, 5.4, 3.3, 3.4, 3.9, 3.2, 3.1, 3.0, 2.9, 1.5]}}\n"
+      "c_temp: 8.1 | c_rain: 0.1 | c_snow: 0.0 | c_wind: 10.4\n",
+      "3 4.171167510947728 60\n"
      ]
-    }
-   ],
-   "source": [
-    "api_url = \"https://api.open-meteo.com/v1/forecast?latitude=51.96&longitude=7.63&hourly=apparent_temperature,rain,windspeed_10m&start_date=2022-12-12&end_date=2022-12-12\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "outputs": [
+    },
     {
      "data": {
-      "text/plain": "(0.03409090909090909, 3, 88)"
+      "text/plain": "0.9304805414842046"
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from typing import Tuple\n",
+    "import requests\n",
     "import datetime\n",
     "\n",
     "api_url = \"https://api.open-meteo.com/v1/forecast?latitude=51.96&longitude=7.63&hourly=temperature_2m,rain,snowfall,windspeed_10m&daily=weathercode&timezone=Europe%2FBerlin&start_date={start}&end_date={end}\"\n",
     "\n",
-    "def get_score(day: datetime.datetime) -> Tuple[float, int, int]:\n",
+    "def get_score(day: datetime.datetime) -> float:\n",
     "    formatted = day.strftime(\"%Y-%m-%d\")\n",
     "    res = requests.get(api_url.format(start=formatted, end=formatted)).json()\n",
     "    hourly = res[\"hourly\"]\n",
@@ -74,15 +44,17 @@
     "    c_snow = snowfall[hour]\n",
     "    c_wind = wind[hour]\n",
     "\n",
+    "    print(\"c_temp:\", c_temp, \"| c_rain:\", c_rain, \"| c_snow:\", c_snow, \"| c_wind:\", c_wind)\n",
+    "\n",
     "    points = 0\n",
     "    max_points = 0\n",
     "\n",
-    "    max_points += 43\n",
-    "    # in C\n",
+    "    max_points += 15\n",
+    "    # in °C\n",
     "    if c_temp < -5:\n",
-    "        points += 43\n",
+    "        points += 15\n",
     "    elif c_temp < 0:\n",
-    "        points += 3\n",
+    "        points += 5\n",
     "    elif c_temp < 5:\n",
     "        points += 2\n",
     "    elif c_temp < 10:\n",
@@ -90,46 +62,53 @@
     "\n",
     "    max_points += 15\n",
     "    # in mm\n",
-    "    if c_rain > 30:\n",
+    "    if c_rain >= 30:\n",
     "        points += 15\n",
-    "    elif c_rain > 10:\n",
+    "    elif c_rain >= 10:\n",
     "        points += 8\n",
-    "    elif c_rain > 2.5:\n",
+    "    elif c_rain >= 2.5:\n",
     "        points += 4\n",
-    "    elif c_rain > 0:\n",
+    "    elif c_rain >= 0:\n",
     "        points += 1\n",
     "\n",
     "    max_points += 15\n",
     "    # in cm\n",
-    "    if c_snow > 10:\n",
+    "    if c_snow >= 10:\n",
     "        points += 15\n",
-    "    elif c_snow > 3:\n",
+    "    elif c_snow >= 3:\n",
     "        points += 4\n",
-    "    elif c_snow > 1:\n",
+    "    elif c_snow >= 1:\n",
     "        points += 2\n",
-    "    elif c_snow > 0:\n",
+    "    elif c_snow >= 0:\n",
     "        points += 1\n",
     "\n",
     "    max_points += 15\n",
     "    # in km/h\n",
-    "    if c_wind > 60: # stürmischer wind\n",
+    "    if c_wind >= 60: # stormy wind\n",
     "        points += 15\n",
-    "    elif c_wind > 40: # starker wind\n",
+    "    elif c_wind >= 40: # strong wind\n",
     "        points += 9\n",
-    "    elif c_wind > 30: # frische briese\n",
+    "    elif c_wind >= 30: # fresh breeze\n",
     "        points += 3\n",
-    "    elif c_wind > 12: # schwache briese\n",
+    "    elif c_wind >= 12: # faint breeze\n",
     "        points += 1\n",
     "\n",
-    "    return points / max_points, points, max_points\n",
+    "    print(points, points ** 1.3, max_points)\n",
+    "    return 1 - min(points ** 1.3 / max_points, 1.0)\n",
     "\n",
     "get_score(datetime.datetime.now())"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
